I tryied to write a lexic analyser